--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,8 @@
+@import "./group";
 @import "./variable";
+@import "config/colors";
 @import "./main";
+@import "modules/flash";
+@import "./user";
 @import "./reset";
 @import "font-awesome";
