--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,22 +1,4 @@
-.flash-box
-  グループを作成しました
-
-.chat-side
-  .side-header
-    .side-header__user-name
-      モチベ
-    .side-header__menu
-      = link_to '#', class: "side-header__menu--create" do
-        = fa_icon 'pencil-square-o'
-      = link_to '#', class: "side-header__menu--edit" do
-        = fa_icon 'cog'
-
-  .groups
-    = link_to '#', class: "group" do
-      .group__group-name
-        学習の友
-      .group__latest-message
-        モチベ上げてこうぜ！
+= render "devise/shared/side_bar"
 
 .chat-main
   .main-header
@@ -25,7 +7,7 @@
         学習の友
       .main-header__left__member-list
         Member : HTML CSS Ruby Rails
-    = link_to '#', class: "main-header__edit-btn" do
+    = link_to edit_group_path, class: "main-header__edit-btn" do
       Edit
 
   .messages
