--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -153,7 +153,7 @@
           right: 10px;
           cursor: pointer;
 
-          .fa {
+          .icon {
             display: inline-block;
             font-size: inherit;
             text-rendering: auto;
