--- a/app/views/devise/shared/_side_bar.html.haml
+++ b/app/views/devise/shared/_side_bar.html.haml
@@ -10,8 +10,8 @@
 
   .groups
     - current_user.groups.each do |group|
-      = link_to groups_path(group), method: 'post', class: "group" do
+      = link_to group_messages_path(group), class: "group" do
         .group__group-name
           = group.name
         .group__latest-message
-          メッセージはまだありません。
+          = group.show_last_message
