--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,8 +3,9 @@
     .message__upper-info__talker
       = message.user.name
     .message__upper-info__date
-      = message.created_at.strftime("%Y/%m/%d %H:%M")
+      = message.created_at.strftime("%Y/%m/%d(%a) %H:%M:%S")
   .message__text
     - if message.content.present?
-      = message.content
-    = image_tag message.image.url if message.image.present?
+      .message__text__content
+        = message.content
+      = image_tag message.image.url if message.image.present?
