--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -16,7 +16,7 @@
     = render @messages
 
   .form
-    = form_for [@group, @message], class: 'new_message' do |f|
+    = form_for [@group, @message], id: 'new_message' do |f|
       .input-box
         = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
         = f.label :image, class: 'input-box__image' do
